# yamsLog

./: .gitignore  README.md  xcode-migration.txt
SDK-workspaces/eclipse-android-SDK/: ReadMe.txt
client-backend/: .classpath  .project  ReadMe.txt  build.xml  runMe.sh
client-backend/src/: NewDebugger.java  OutsideCode.java  filterDebugger.java
client-backend/src/Database/: Database.java  ListenerHandler.java  MessageBuilder.java  Pair.java
client-backend/src/Database/Messages/: ExperimentMetaData.java  Message.java  ProjectMetaData.java  RequestSender.java
client-backend/src/Database/Sensors/: GenericMessage.java  ReadWriteLock.java  Sensor.java
client-backend/src/Errors/: BackendAlreadyExistsError.java  BackendDoesNotExistError.java  BackendError.java  ConnectionError.java  ErrorSender.java  IdDoesNotExistError.java  NoDataError.java  OtherItemRequiredError.java  SensorAlreadyExistsError.java  SensorDoesNotExistError.java  StatusNotReceivedError.java  ThreadDoesNotExistError.java  ThreadIsLockedError.java
client-backend/src/FrontendConnection/: Backend.java
client-backend/src/FrontendConnection/Listeners/: ActiveExperimentListener.java  ActiveProjectListener.java  DynamicEventListener.java  ExperimentListChangedListener.java  ExperimentMetaDataListener.java  ProjectCreationStatusListener.java  ProjectListChangedListener.java  ProjectMetaDataListener.java  ResponseReceivedListener.java  SensorStatusListener.java  ServerErrorMessageListener.java  ServerStatusListener.java  UpdatedFrontendDataListener.java
client-backend/src/ServerConnection/: Handle.java  ThreadedListener.java
clients/ERLogger/: .gitignore  README.md
clients/ERLogger/src/common/: Config.java  Data.java  DataListener.java  (+4 more)
clients/android/: .project  AndroidManifest.xml
clients/iOS/: AddPlotViewController.h  AddPlotViewController.mm  AppDelegate.h  AppDelegate.m  AxisLimits.h  AxisLimits.m  CDMiniClientViewController.h  CDMiniClientViewController.mm  ChooseAttributesViewController.h  ChooseAttributesViewController.mm  CircularDataArray.h  CircularDataArray.m  CommunicationCentral.h  CommunicationCentral.mm  CommunicationCentralDelegate.h  ConnectionClient.h  ConnectionClient.mm  CreateProjectViewController.h  CreateProjectViewController.m  DataPoint.h  DataPoint.m  DynamicEventsViewController.h  DynamicEventsViewController.mm  GraphPlotterViewController.h  GraphPlotterViewController.m  Info.plist  LaunchScreen.xib  Main.storyboard  OldCircularDataArray.h  OldCircularDataArray.m  PlotPageViewController.h  PlotPageViewController.mm  PlotViewController.h  PlotViewController.mm  ProjectTabViewController.h  ProjectTabViewController.mm  RealTimeGraphView.h  RealTimeGraphView.m  RealTimeGraphViewDataSource.h  SensorConfiguration.h  (+8 more)
documents/: source_code_comment.txt
protobuf/: README.txt  generate.bat  generate.sh  protocol.proto
server/exampleData/: ReadMe.txt  matfil.converted  matfil.txt  matfil_large.converted  matfil_large.txt
server/exampleData/Text2BinConverter/: .classpath  .project
server/install-files/: 99-yamsLog-Symlinks.rules  ReadMe.txt  monitrc  yamslogd.service
server/yamsLogd/: .gitignore  CMakeLists.txt  ReadMe.txt  ToDo.txt  memcheck.sh  min_max_sensor_values.txt  port_config.txt
server/yamsLogd/config-files/: port_config.conf  port_config.txt  sensor_definitions.conf  sensor_definitions.txt
server/yamsLogd/scripts/: run.bash
server/yamsLogd/src/: ClientCallbackImpl.cpp  ClientCallbackImpl.h  ClientConnection.cpp  ClientConnection.h  CommunicationServer.cpp  CommunicationServer.h  DataLogger.cpp  DataLogger.h  Experiment.cpp  Experiment.h  FileSysTest.cpp  Main.cpp  ModificationCallbackImpl.cpp  ModificationCallbackImpl.h  Project.cpp  Project.h  ProjectHandler.cpp  ProjectHandler.h  ProjectHandlerConstants.h  ProjectHandlerErrorCodes.h  SensorDefinitionReader.cpp  SensorDefinitionReader.h  SensorMinMax.cpp  SensorMinMax.h  StatusObserver.cpp  StatusObserver.h  ThreadSafeFifo.h
server/yamsLogd/src/sensors/: AbstractSensor.cpp  AbstractSensor.h  CAN.cpp  CAN.h  CanSensor.cpp  CanSensor.h  CorrsysSensor.cpp  CorrsysSensor.h  ERDataLogger.cpp  ERDataLogger.h  GpsSensor.cpp  GpsSensor.h  ImuSensor.cpp  ImuSensor.h  MTComm.cpp  MTComm.h  OBDIIElmSensor.cpp  OBDIIElmSensor.h  SerialPortLib.cpp  SerialPortLib.h  VirtualSensor.cpp  VirtualSensor.h  XSensIMU.cpp  XSensIMU.h
server/yamsLogd/src/sensors/OBDII-ELM327/: .gitignore  OBDReader.cpp  OBDReader.h  OBDtool-Example.sh  OBDtool-checkCapabilities.sh  OBDtool.cpp  ReadMe.txt  ToDo-OBDII-Fixes.txt  logOBDII  logOBDII.c  logOBDII.cpp  logOBDII.h  logOBDII_main.c  logOBDII_main.cpp  obdconfig.h  obdconfigfile.c  obdconfigfile.h  obdconvertfunctions.cpp  obdconvertfunctions.h  obdrevconvertfunctions.c  obdserial.c  obdserial.cpp  obdserial.h  obdservicecommands.c  obdservicecommands.h  supportedcommands.c  supportedcommands.cpp  supportedcommands.h
server/yamsLogd/src/services/: AbstractService.cpp  AbstractService.h  CommunicationServerService.cpp  CommunicationServerService.h  KeyboardInputService.cpp  KeyboardInputService.h  OutputServiceConstants.h  ProtobufFileOutputService.cpp  ProtobufFileOutputService.h  ProtobufTcpOutputService.cpp  ProtobufTcpOutputService.h  TextFileOutputService.cpp  TextFileOutputService.h
tablet-client/: .classpath  .project  ReadMe.txt
tablet-client/res/drawable-hdpi/: participantlistborder.xml
tablet-client/res/layout/: activity_sensor_list.xml  choose_project.xml  dynamic_event_button.xml  fragment_sensor_detail.xml  fragment_sensor_status.xml  graph_container.xml  participant_element.xml  participant_header.xml  view_list_item.xml
tablet-client/res/menu/: main_activity_menu.xml
tablet-client/res/values/: ids.xml
yamsLog.xcodeproj/: project.pbxproj
yamsLog.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
yamsLog.xcodeproj/project.xcworkspace/xcshareddata/: yamsLog.xccheckout
yamsLogd.xcodeproj/: project.pbxproj
yamsLogd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
yamsLogd.xcodeproj/project.xcworkspace/xcshareddata/: yamsLogd.xccheckout
(+106 files in other folders)
